# necs

./: Cargo.toml  README.md
.fleet/: run.json  settings.json
.github/workflows/: rust.yml
benches/: node_iteration.rs
necs_internal/: Cargo.toml
necs_internal/src/: component.rs  lib.rs  mini_type_id.rs  node.rs  node_map.rs  relations.rs  trait_map.rs  type_map.rs
necs_internal/src/storage/: component_storage.rs  key.rs  map_key.rs  mini_type_map.rs  mod.rs  node_storage.rs
necs_internal/src/storage/mini_type_map/: key.rs  mini_type_id.rs  mod.rs
necs_macros/: Cargo.toml
necs_macros/src/: lib.rs  utils.rs
src/: lib.rs  register_traits.rs
tests/: Cargo.toml
tests/src/: lib.rs
