[package]
name = "necs"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
keywords = ["gamedev"]
categories = ["game-development"]

[dependencies]
necs_internal = { path = "necs_internal" }
necs_macros = { path = "necs_macros" }

[dev-dependencies]
criterion = { version = "0.8.0", features = ["html_reports"] }

[[bench]]
name = "node_iteration"
harness = false

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]

[workspace]
resolver = "2"
members = ["necs_internal", "necs_macros", "tests"]
